--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-image: url("27725-365890983_tiny.jpg");
+    background-image: url("images/27725-365890983_tiny.jpg");
     
 }
 
